# sovereign-edge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  SOUL.md  SOUL.md.example  Taskfile.yml  _setup.py  docker-compose.jetson.yml  docker-compose.yml  handler.py  pyproject.toml  verify.py
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
agents/career/: pyproject.toml
agents/career/src/career/: __init__.py  expert.py  scraper.py  squad.py  subgraph.py
agents/career/tests/: test_subgraph.py
agents/creative/: pyproject.toml
agents/creative/src/creative/: __init__.py  expert.py  squad.py  subgraph.py
agents/director/: pyproject.toml
agents/director/src/director/: __init__.py  graph.py
agents/goals/: pyproject.toml
agents/goals/src/goals/: __init__.py  expert.py  store.py  subgraph.py
agents/goals/tests/: test_goals.py  test_goals_validation.py
agents/intelligence/: pyproject.toml
agents/intelligence/src/intelligence/: __init__.py  arxiv.py  earnings.py  expert.py  market.py  squad.py  subgraph.py
agents/intelligence/tests/: test_earnings.py
agents/orchestrator/: pyproject.toml
agents/orchestrator/src/orchestrator/: __init__.py  graph.py  main.py  state.py
agents/spiritual/: pyproject.toml
agents/spiritual/src/spiritual/: __init__.py  bible_rag.py  expert.py  squad.py  subgraph.py
docs/: architecture.md  configuration.md  deployment.md  development.md  experts.md  mcp-setup.md  squads.md  voice-setup.md
evals/: harness.py  test_brief_quality.py
scripts/: deploy-vps.sh  entrypoint.sh  jetson_benchmark.py  setup-jetson.sh
secrets/: .sops.yaml
services/discord/: pyproject.toml
services/discord/src/discord_bot/: __init__.py  bot.py
services/health/: pyproject.toml
services/health/src/health/: __init__.py  auth.py  dashboard.py  server.py
services/health/static/: style.css
services/health/tests/: test_dashboard.py
services/mcp/: pyproject.toml
services/mcp/src/mcp_server/: __init__.py  server.py
services/mcp/tests/: test_mcp_server.py
services/telegram/: pyproject.toml
services/telegram/src/telegram_bot/: __init__.py  __main__.py  bot.py  scheduler.py
services/voice/: pyproject.toml
services/voice/src/voice/: __main__.py  pipeline.py  stt.py  tts.py  wake.py
services/whatsapp/: pyproject.toml
services/whatsapp/src/whatsapp/: __init__.py  bot.py
services/whatsapp/tests/: test_whatsapp.py
systemd/: ai-stack.target  ollama.service  orchestrator.service  scheduler.service  telegram-bot.service  voice.service
tests/: test_audit_security.py  test_gateway.py  test_router.py  test_search.py
