[project]
name = "sovereign-edge"
version = "0.1.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*", "agents/*", "services/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP", "ANN"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
addopts = "--tb=short -q"
testpaths = ["packages", "agents", "services", "evals"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # allow assert in tests
