[project]
name = "sovereign-edge-career"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jobspy>=0.1,<1.0",
    "jinja2>=3.1,<4.0",
    "python-docx>=1.1,<2.0",
    "sovereign-edge-core",
    "sovereign-edge-llm",
    "sovereign-edge-memory",
    "sovereign-edge-observability",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-llm = { workspace = true }
sovereign-edge-memory = { workspace = true }
sovereign-edge-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/career"]
