[project]
name = "sovereign-edge-creative"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "sovereign-edge-core",
    "sovereign-edge-llm",
    "sovereign-edge-observability",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-llm = { workspace = true }
sovereign-edge-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creative"]
