[project]
name = "sovereign-edge-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<1.0",
    "langchain-core>=0.3,<1.0",
    "apscheduler>=3.10,<4.0",
    "sovereign-edge-core",
    "sovereign-edge-llm",
    "sovereign-edge-memory",
    "sovereign-edge-router",
    "sovereign-edge-observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
