[project]
name = "sovereign-edge-orchestrator"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<1.0",
    "langchain-core>=0.3,<1.0",
    "apscheduler>=3.10,<4.0",
    "sovereign-edge-core",
    "sovereign-edge-llm",
    "sovereign-edge-memory",
    "sovereign-edge-router",
    "sovereign-edge-observability",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-llm = { workspace = true }
sovereign-edge-memory = { workspace = true }
sovereign-edge-router = { workspace = true }
sovereign-edge-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
