[project]
name = "sovereign-edge-health"
version = "0.1.0"
description = "Lightweight health / readiness endpoint for the sovereign-edge container"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sovereign-edge-core",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }

[project.scripts]
# Start the health server directly: uv run health-server
health-server = "health.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/health"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
