[project]
name = "sovereign-edge-voice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sovereign-edge-core",
    "sovereign-edge-observability",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice"]
